# monitoring

./: .gitlab-ci.yml  Dockerfile  README.md  celeryconfig.py  devspace.yaml  docker-compose.yaml  docker-startup.sh  kustomization.yaml  pyproject.toml
apps/common/: helpers.py
apps/monitoring/: admin.py  apps.py  helpers.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/monitoring/migrations/: 0001_initial.py  0002_step_step_number.py
apps/users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/: email.html
config/: asgi.py  settings.py  urls.py  wsgi.py
docker/: kustomization.yaml
docker/k8s/selenium-hub/: deployment.yml
docker/k8s/selenium-hub/ingress/: ingress.yml  kustomization.yaml
docker/k8s/selenium-hub/service/: kustomization.yaml  service.yml
